--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: VirtuPathAPI
-    env: native
+    runtime: dotnet
     buildCommand: "dotnet build"
     startCommand: "dotnet run --project VirtuPathAPI/VirtuPathAPI.csproj"
     branch: main
