--- a/VirtuPathAPI/VirtuPathAPI.csproj
+++ b/VirtuPathAPI/VirtuPathAPI.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="TimeZoneConverter" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
