--- a/VirtuPathAPI/appsettings.json
+++ b/VirtuPathAPI/appsettings.json
@@ -7,5 +7,10 @@
     }
   },
 
+  "Mongo": {
+    "ConnectionString": "mongodb+srv://virtupathai:v8FC923MVg03AApu@virtupathai.mytrtqm.mongodb.net/?retryWrites=true&w=majority&appName=VirtuPathAI",
+    "Database": "virtupathai"
+  },
+
   "AllowedHosts": "*"
 }
